<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/activity_video_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.76"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.76"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:weightSum="4">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.05"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:src="@drawable/dd" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/office"
                            android:textColor="@color/colorCharacter" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.05"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:src="@drawable/tlp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/contact"
                            android:textColor="@color/colorCharacter" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.05"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:src="@drawable/hoidap" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.05"
                            android:gravity="center"
                            android:text="@string/faq"
                            android:textColor="@color/colorCharacter" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.85"
                        android:gravity="center">

                        <Switch
                            android:id="@+id/switch1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:showText="true"
                            android:textOff="vi"
                            android:textOn="en"
                            android:thumb="@drawable/customswitch"
                            android:trackTint="@color/color1" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.75">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.75"
                            android:src="@drawable/logo" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.25"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.35" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.65"
                            android:text="@string/left"
                            android:textColor="@color/colorCharacter"
                            android:textSize="10dp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.95"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="3dp"
                    android:src="@drawable/username" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_UserName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:textColorHint="@color/colorCharacter">

                        <EditText
                            android:id="@+id/UserName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@android:color/background_light"
                            android:gravity="left|center_vertical"
                            android:hint="@string/username"
                            android:inputType="text"
                            android:textColor="@color/colorCharacter"
                            android:textColorHint="@color/colorCharacter"
                            android:textColorLink="@android:color/background_light" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_weight="1.5"
                        android:gravity="left|center"
                        android:text=""
                        android:textColor="@color/colorCharacter"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="3dp"
                    android:src="@drawable/p" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_PassWord"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:textColorHint="@color/colorCharacter"
                        app:passwordToggleDrawable="@drawable/showpass"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorCharacter">

                        <EditText
                            android:id="@+id/Password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@android:color/background_light"
                            android:gravity="left|center_vertical"
                            android:hint="@string/password"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/colorCharacter"
                            android:textColorHint="@color/colorCharacter"
                            android:textColorLink="@android:color/background_light" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_weight="1.5"
                        android:gravity="left|center"
                        android:text=""
                        android:textColor="@color/colorCharacter"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1.18">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="150dp"
                android:text="@string/no_login"
                android:textColor="@color/colorCharacter"
                android:textSize="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.09">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_login"
                android:text="@string/login"
                android:textColor="@color/colorCharacter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.02"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no_username"
                    android:textColor="@color/colorCharacter"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <ImageView
                            android:layout_width="300dp"
                            android:layout_height="30dp"
                            android:layout_weight="1.85"
                            android:outlineAmbientShadowColor="@color/colorCharacter" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center|left"
                            android:layout_weight="0.25"
                            android:text="@string/fru"
                            android:textColor="@color/colorCharacter"
                            android:textSize="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="20dp"
                            android:text="@string/terms_of_use"
                            android:textColor="@color/colorCharacter"
                            android:textSize="10dp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|right"
                        android:paddingRight="20dp"
                        android:text="@string/version"
                        android:textColor="@color/colorCharacter"
                        android:textSize="10dp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
